--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "src"
   ],
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "rollup-plugin-node-polyfills": "^0.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.14",
