🔥 Updating rollup, fixing bundling, adding global index.d.ts

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: CI Publish
+name: "🚀 Publish"
 
 on:
   release:
@@ -6,6 +6,7 @@ on:
 
 jobs:
   publish:
+    name: "🚀 Publish"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
