--- a/package.json
+++ b/package.json
@@ -1,60 +1,58 @@
 {
   "name": "axios-template-literal",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Ufff, sorry, too many sugar for axios.",
   "main": "dist/cjs/index.js",
-  "browser": "dist/umd/axiosTemplateLiteral.js",
   "module": "dist/es/index.js",
   "jsxnext:main": "dist/es/index.js",
-  "umdName": "axiosTemplateLiteral",
   "types": "dist/types/index.d.ts",
   "files": [
     "src"
   ],
   "dependencies": {
-    "axios": "^0.21.1",
-    "rollup-plugin-node-polyfills": "^0.2.1"
+    "axios": "^0.21.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.14",
-    "@babel/core": "^7.13.14",
-    "@babel/preset-env": "^7.13.12",
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
     "@babel/preset-typescript": "^7.13.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@types/axios": "^0.14.0",
-    "@types/node": "^14.14.37",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^18.0.0",
+    "@rollup/plugin-node-resolve": "^11.2.1",
+    "@rollup/plugin-typescript": "^8.2.1",
+    "@types/node": "^14.14.39",
     "@types/prettier": "^2.2.3",
-    "@typescript-eslint/eslint-plugin": "^4.21.0",
-    "@typescript-eslint/parser": "^4.21.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "babel-plugin-add-module-exports": "^1.0.4",
     "cross-env": "^7.0.3",
-    "eslint": "^7.23.0",
+    "eslint": "^7.24.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "rollup": "^2.44.0",
+    "rollup": "^2.45.2",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-dts": "^3.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "rollup-plugin-uglify": "^6.0.4",
     "ts-node": "^9.1.1",
     "tslib": "^2.2.0",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.4"
   },
   "scripts": {
     "test": "jest",
     "watch": "rollup -c -w",
     "build": "rimraf dist && cross-env NODE_ENV=production rollup -c",
     "build:types": "rimraf dist/types && tsc src/index.ts",
-    "release": "release-it",
     "lint": "eslint src/*.ts",
     "prepublish": "npm run build",
-    "prepush": "npm run lint",
-    "prepublishOnly": "npm run build"
+    "prepush": "npm run lint"
   },
   "keywords": [
     "template",
@@ -67,10 +65,10 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pfrazee/http-template-literal.git"
+    "url": "git+https://github.com/shtelzerartem/axios-template-literal.git"
   },
   "bugs": {
-    "url": "https://github.com/pfrazee/http-template-literal/issues"
+    "url": "https://github.com/shtelzerartem/axios-template-literal/issues"
   },
-  "homepage": "https://github.com/pfrazee/http-template-literal#readme"
+  "homepage": "https://github.com/shtelzerartem/axios-template-literal#readme"
 }
