--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
-	"compilerOptions": {
-		"target": "es5",
-		"module": "es2015",
-		"strict": true,
-		"esModuleInterop": true,
-		"moduleResolution": "node"
-	}
+  "compilerOptions": {
+    "target": "es5",
+    "module": "esnext",
+    "strict": true,
+    "esModuleInterop": true,
+    "moduleResolution": "node",
+    "declaration": true,
+    "declarationDir": "dist/types"
+  }
 }
